modified index.js and added public folder

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <div id="world-map" style="width: 1000px; height: 800px"></div>
   <script>
     
-    $.get("http://localhost:3001/getColumns", function( data ) {
+    $.get("http://35.224.68.135:3001/getColumns", function( data ) {
 
       $('#world-map').vectorMap({
   map: 'world_mill',
