--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,13 @@
     <script src="jquery-jvectormap-2.0.3.min.js"></script>
     <script src="http://jvectormap.com/js/jquery-jvectormap-world-mill.js"></script>
   </head>
-  <body>
-    <div id="world-map-que" style="width: 1000px; height: 800px"></div>
-    <div id="world-map-ans" style="width: 1000px; height: 800px"></div>
+  <body style="background-color: rgb(80,80,80);">
+    <div style="width: 50%;float:left;">
+    <div id="world-map-que" style="width: 100%; height: 800px;padding:20px"></div>
+  </div>
+  <div style="width: 50%;float:left;">
+    <div id="world-map-ans" style="width: 100%; height: 800px;padding:20px;"></div>
+  </div>
     <span id="creation_date"></span>
     <script>
     
