--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
   </head>
   <body style="background-color: rgb(80,80,80);">
     <div style="width: 50%;float:left;">
-    <div id="world-map-que" style="width: 100%; height: 800px;padding:20px"></div>
+    <div id="world-map-que" style="height: 800px;padding:20px"></div>
   </div>
   <div style="width: 50%;float:left;">
-    <div id="world-map-ans" style="width: 100%; height: 800px;padding:20px;"></div>
+    <div id="world-map-ans" style="height: 800px;padding:20px;"></div>
   </div>
     <span id="creation_date"></span>
     <script>
