--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     series: {
     regions: [{
     values: data.result,
-    scale: ['#C8EEFF', '#0071A4'],
+    scale: ['#94e594', '#155415'],
     normalizeFunction: 'polynomial'
     }]
     },
