--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     series: {
     regions: [{
     values: data.result,
-    scale: ['#94e594', '#155415'],
+    scale: ['#d8f6d8', '#2fc22f'],
     normalizeFunction: 'polynomial'
     }]
     },
