change map height

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div id="world-map-que" style="height: 470px;padding:20px"></div>
   </div>
   <div style="width: 50%;float:left;">
-    <div id="world-map-ans" style="height: 470;padding:20px;"></div>
+    <div id="world-map-ans" style="height: 470px;padding:20px;"></div>
   </div>
     <span id="creation_date"></span>
     <script>
