--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>jVectorMap demo</title>
     <link rel="stylesheet" href="jquery-jvectormap-2.0.3.css" type="text/css" media="screen"/>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -11,13 +15,17 @@
     <script src="http://jvectormap.com/js/jquery-jvectormap-world-mill.js"></script>
   </head>
   <body style="background-color: rgb(80,80,80);">
-    <div style="width: 50%;float:left;">
-    <div id="world-map-que" style="height: 470px;padding:20px"></div>
-  </div>
-  <div style="width: 50%;float:left;">
-    <div id="world-map-ans" style="height: 470px;padding:20px;"></div>
-  </div>
-    <span id="creation_date"></span>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <div id="world-map-que" style="height: 470px;padding:20px"></div>
+        </div>
+        <div class="col-md-6">
+          <div id="world-map-ans" style="height: 470px;padding:20px;"></div>
+        </div>
+      </div>
+      <span id="creation_date"></span>
+    </div>
     <script>
     
     $.get("http://35.224.68.135:3001/getData/demographic_questions", function( data ) {
@@ -60,7 +68,7 @@
     }
     el.html(el.html()+' (Answers - '+data.result[code]+')');
     }
-    });  
+    });
     
     });
     </script>
