--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     series: {
     regions: [{
     values: data.result,
-    scale: ['#d8f6d8', '#2fc22f'],
+    scale: ['#e3ccf8', '#9137e3'],
     normalizeFunction: 'polynomial'
     }]
     },
