--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,10 @@
     regions: [{
     values: data.result,
     scale: ['#C8EEFF', '#0071A4'],
-    normalizeFunction: 'polynomial'
+    normalizeFunction: 'polynomial',
+    legend: {
+          horizontal: true
+        }
     }]
     },
     onRegionTipShow: function(e, el, code){
