heading font size

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <body style="background-color: rgb(80,80,80);">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-4 col-md-offset-4 col-xs-12">
-          <h3 class="font-stack" style="color:#fff">stack<b>overflow</b> analysis</h3> 
+        <div class="col-xs-12">
+          <h3 class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</h3> 
         </div>
       </div>
       <div class="row">
