--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12">
-          <h3 class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</h3> 
+          <img src="images/so.png"><h3 class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</h3> 
         </div>
       </div>
       <div class="row">
