change heading style

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <body style="background-color: rgb(80,80,80);">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12">
-          <img src="images/so.png"><h3 class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</h3> 
+        <div class="col-xs-12" style="text-align: center;padding-top:23px;">
+          <img src="images/so.png" style="height: 80px;position: relative;top: -33px;left: -13px;"><span class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</span>
         </div>
       </div>
       <div class="row">
@@ -44,8 +44,8 @@
     scale: ['#C8EEFF', '#0071A4'],
     normalizeFunction: 'polynomial',
     legend: {
-          horizontal: true
-        }
+    horizontal: true
+    }
     }]
     },
     onRegionTipShow: function(e, el, code){
