--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,7 @@
     regions: [{
     values: data.result,
     scale: ['#C8EEFF', '#0071A4'],
-    normalizeFunction: 'polynomial',
-    legend: {
-    horizontal: true
-    }
+    normalizeFunction: 'polynomial'
     }]
     },
     onRegionTipShow: function(e, el, code){
