--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <body style="background-color: rgb(80,80,80);">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12" style="text-align: center;padding-top:23px;">
+        <div class="col-xs-12" style="text-align: center;padding:40px 0;">
           <img src="images/so.png" style="height: 80px;position: relative;top: -33px;left: -13px;"><span class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</span>
         </div>
       </div>
