--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
     <script src="http://jvectormap.com/js/jquery-jvectormap-world-mill.js"></script>
   </head>
   <body style="background-color: rgb(80,80,80);">
-    <div class="container-fluid">
-      <div class="row">
-        <h1>Demographic distribution of Questions and Answers</h1>
-      </div>>
+    <div class="container-fluid">    
       <div class="row">
         <div class="col-xs-12" style="text-align: center;padding:40px 0;">
           <img src="images/so.png" style="height: 80px;position: relative;top: -33px;left: -13px;"><span class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</span>
-        </div>
+        </div>        
+      </div>
+        <div class="row" style="color: #fff">
+        <h2>Demographic distribution of Questions and Answers</h2>
       </div>
       <div class="row">
         <div class="col-md-6">
