--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
   <body style="background-color: rgb(80,80,80);">
     <div class="container-fluid">    
       <div class="row">
-        <div class="col-xs-12" style="text-align: center;padding:40px 0;">
+        <div class="col-xs-12" style="text-align: center;padding:40px 0 20px 0;">
           <img src="images/so.png" style="height: 80px;position: relative;top: -33px;left: -13px;"><span class="font-stack" style="color:#fff;text-align: center;font-size: 60px;">stack<b>overflow</b> trends</span>
         </div>        
       </div>
-        <div class="row" style="color: #fff">
+        <div class="row" style="color: #fff;margin-left:60px;margin-top: 0px">
         <h2>Demographic distribution of Questions and Answers</h2>
       </div>
       <div class="row">
