--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,12 @@
         </div>
         <div class="col-md-6">
           <div id="world-map-ans" style="height: 470px;padding:20px;"></div>
-        </div style="color: #fff"> 
-      </div>Last updated on: </span>
+        </div>
+      </div>
+      <div style="color: #fff">
+      <span >Last updated on:</span>
       <span id="creation_date"></span>
+      </div>
     </div>
     <script>
     
