--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           <div id="world-map-ans" style="height: 470px;padding:20px;"></div>
         </div>
       </div>
-      <div style="color: #fff">
+      <div style="color: #fff; float:right;">
       <span >Last updated on:</span>
       <span id="creation_date"></span>
       </div>
