--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
         </div>
       </div>
       <div class="row" style="color: #fff;margin-left:30px;margin-top: 0px">
-        <h2>Demographic distribution of </h2>
-        <span id="count_que"></span>
-        <h2>Questions</h2>
-        <h2> and </h2>
-        <span id="count_ans"></span>
-        <h2>Answers</h2>
+        <h2>Demographic distribution of
+        <span style="color:#C8EEFF;"><span id="count_que"></span>
+        Questions</span>
+        and
+        <span style="color:#e3ccf8;"><span id="count_ans"></span>
+        Answers</span></h2>
       </div>
       <div class="row">
         <div class="col-md-6">
@@ -86,9 +86,8 @@
     }
     el.html(el.html()+' (Answers - '+data.result[code]+')');
     }
-     
     });
-     $("#count_ans").text(data.count);
+    $("#count_ans").text(data.count);
     });
     </script>
   </body>
