--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       </div>
       <div class="row" style="color: #fff;margin-left:30px;margin-top: 0px">
         <h2>Demographic distribution of
-        <span style="color:#C8EEFF;"><span id="count_que"></span>
+        <span style="color:#73d4ff;"><span id="count_que"></span>
         Questions</span>
         and
-        <span style="color:#e3ccf8;"><span id="count_ans"></span>
+        <span style="color:#ba81ee;"><span id="count_ans"></span>
         Answers</span></h2>
       </div>
       <div class="row">
