--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     el.html(el.html()+' (Questions - '+data.result[code]+')');
     }
     });
-    $("#creation_date").text(moment(data.creation_Date,'DD-MM-YYYY'));
+    $("#creation_date").text(moment(data.creation_Date,'DD-MM-YYYY').format());
     $("#count_que").text(data.count);
     
     });
