--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
         <span id="creation_date"></span>
       </div>
       <div class="row">
-        <div class="col-xs-12" style="font-size: 17px;color:#fff;">
-          Analytics is performed on publicly available Stack<b>overflow</b> <a href="https://archive.org/details/stackexchange">data</a>. This <a href="https://gist.github.com/shubhi1407/0ec93b5ec7eacfc5cfb7c7766c504da4">script</a> is scheduled to run every 2 months to download data using Google BigQuery. It then spins up an Apache Spark cluster which processes the data and outputs country wise counts to a MySQL instance. More coming soon !
+        <div class="col-xs-12" style="font-size: 17px;color:#fff;padding-top:10px;">
+          Analytics is performed on publicly available Stack<b>overflow</b> <a href="https://archive.org/details/stackexchange">data</a>. This <a href="https://gist.github.com/shubhi1407/0ec93b5ec7eacfc5cfb7c7766c504da4">script</a> is scheduled to run every 2 months to download data using Google BigQuery. It then spins up an Apache Spark cluster which processes the data and outputs country wise counts to a MySQL instance to be served over ExpressJS. More insights coming soon !
         </div>
       </div>
     </div>
