--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-    <div id="container"></div>
+    <div id="container" style="margin-top:30px"></div>
     <script>
     
     $.get("http://stackxchange.info/getData/demographic_questions", function( data ) {
