--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,7 @@
     console.log(data);
     Highcharts.chart('container', {
 				   chart: {
+				   width:1000,
 				   backgroundColor:"rgb(80,80,80)",
             type: 'spline',
             parallelCoordinates: true,
